Adjust textarea height to avoid clipping

--- a/src/Styles/Experience.css
+++ b/src/Styles/Experience.css
@@ -20,7 +20,7 @@
   grid-column: 1;
   grid-row: 3/4;
   width: 500px;
-  height: 300px;
+  height: 250px;
   resize: none;
   display: block;
   margin-left: auto;
